Add GH cli to .devcontainers

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,5 +5,8 @@
     "vscode": {
       "extensions": ["golang.go", "ms-vscode.makefile-tools"]
     }
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {}
   }
 }
